# crambo-desktop

./: .gitignore  .replit  replit.md
attached_assets/: Pasted--0x0000001A-uint32-0x00000001-found-cert-with-organizat_1772920499204.txt  Pasted--Access-Code-and-automation-Security-Integrations-Gener_1772811714424.txt  Pasted--Configuring-incomplete-errors-occurred-stderr-running-_1772816387546.txt  Pasted--Configuring-incomplete-errors-occurred-stderr-running-_1772817765165.txt  Pasted--Configuring-incomplete-errors-occurred-stderr-running-_1772819599183.txt  Pasted--Configuring-incomplete-errors-occurred-stderr-running-_1772821090693.txt  Pasted--Finished-release-profile-optimized-target-s-in-3m-29s-_1772830939782.txt  Pasted--Finished-release-profile-optimized-target-s-in-3m-29s-_1772831686969.txt  Pasted--Finished-release-profile-optimized-target-s-in-4m-12s-_1772841174911.txt  Pasted--Finished-release-profile-optimized-target-s-in-5m-18s-_1772825493353.txt  Pasted--cargo-info-pkg-config-could-not-find-Opus-cargo-info-O_1772823366742.txt  Pasted--id-08b60934-8f36-4915-a71b-cd4be52b9f0f-status-Invalid_1772927541790.txt  Pasted-Finished-release-profile-optimized-target-s-in-3m-33s-B_1772840183412.txt  Pasted-Objective-Scaffold-a-Tauri-v2-desktop-application-cramb_1772762595548.txt  (+15 more)
crambo-desktop/: package-lock.json  package.json
crambo-desktop/src-tauri/: Cargo.toml  Entitlements.plist  tauri.conf.json
crambo-desktop/src-tauri/capabilities/: default.json
crambo-desktop/src-tauri/src/: audio.rs  detector.rs  main.rs  screen.rs  storage.rs  tray.rs  uploader.rs
(+2 files in other folders)
