[package]
name = "crambo-desktop"
version = "0.1.0"
edition = "2021"
description = "Crambo Desktop — native system audio capture for Mac and Windows"

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-notification = "2"
cpal = "0.15"
hound = "3.5"
screenshots = "0.8"
keyring = "2"
sysinfo = "0.30"
hostname = "0.4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["multipart", "json"] }
tempfile = "3"
image = "0.25"
url = "2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
